// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SessionResultCsvService should display student last name displayed properly for feedbackSessionResultsC1S1NewLastName 1`] = `
"Course,idOfTypicalCourse1
Session Name,First feedback session


Question 1,What is the best selling point of your product?

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",new name new last name,new last name,student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",new name new last name,new last name,student1InCourse1@gmail.tmt,Student 1 self feedback.
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,I'm cool'


Question 2,Rate 1 other student's product

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,Response from student 2 to student 5.
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Response from student 3 \\"\\"to\\"\\" student 2. Multiline test.\\"
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,Response from student 5 to student 2.


Question 3,My comments on the class

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
Instructors,Instructor1 Course1,Course1,instructor1@course1.tmt,-,-,,,\\"Good work, keep it up!\\"


Question 4,Instructor comments on the class

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback


Question 5,New format Text question

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback

"
`;

exports[`SessionResultCsvService should generate results for CONSTSUM question (restricted responses) 1`] = `
"Course,FSQTT.idOfTypicalCourse1
Session Name,CONSTSUM Session


Question 1,How important are the following factors to you? Give points accordingly.

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback,Grades,Fun


Question 2,Split points among the teams

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback


Question 3,How much has each student worked?

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback

"
`;

exports[`SessionResultCsvService should generate results for CONSTSUM question 1`] = `
"Course,FSQTT.idOfTypicalCourse1
Session Name,CONSTSUM Session


Question 1,How important are the following factors to you? Give points accordingly.

Summary Statistics
Option,Points Received,Total Points,Average Points
Fun,\\"20, 81\\",101,50.5
Grades,\\"80, 19\\",99,49.5


Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback,Grades,Fun
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,,19,81
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,,80,20
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,No Response
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,No Response


Question 2,Split points among the teams

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
Instructors,Instructor1 Course1,Course1,instructor1@course1.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"Team 1.1</td></div>'\\"\\"\\",\\"Team 1.1</td></div>'\\"\\"\\",,80
Instructors,Instructor1 Course1,Course1,instructor1@course1.tmt,Team 1.2,Team 1.2,Team 1.2,,20


Question 3,How much has each student worked?

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
Instructors,Instructor1 Course1,Course1,instructor1@course1.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,30
Instructors,Instructor1 Course1,Course1,instructor1@course1.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,20
Instructors,Instructor1 Course1,Course1,instructor1@course1.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,30
Instructors,Instructor1 Course1,Course1,instructor1@course1.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,10
Instructors,Instructor1 Course1,Course1,instructor1@course1.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,10
Instructors,Instructor2 Course1,Course1,instructor2@course1.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,No Response
Instructors,Instructor2 Course1,Course1,instructor2@course1.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,No Response
Instructors,Instructor2 Course1,Course1,instructor2@course1.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,No Response
Instructors,Instructor2 Course1,Course1,instructor2@course1.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,No Response
Instructors,Instructor2 Course1,Course1,instructor2@course1.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,No Response
Instructors,Instructor3 Course1,Course1,instructor3@course1.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,No Response
Instructors,Instructor3 Course1,Course1,instructor3@course1.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,No Response
Instructors,Instructor3 Course1,Course1,instructor3@course1.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,No Response
Instructors,Instructor3 Course1,Course1,instructor3@course1.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,No Response
Instructors,Instructor3 Course1,Course1,instructor3@course1.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,No Response

"
`;

exports[`SessionResultCsvService should generate results for CONTRIB question (restricted section) 1`] = `
"Course,FSQTT.idOfCourseWithSections
Session Name,CONTRIB Session Section Restricted


Question 1,\\"How much has each team member including yourself, contributed to the project?\\"

Summary Statistics
\\"In the points given below, an equal share is equal to 100 points. e.g. 80 means \\"\\"Equal share - 20%\\"\\" and 110 means \\"\\"Equal share + 10%\\"\\".\\"
Claimed Contribution (CC) = the contribution claimed by the student.
Perceived Contribution (PC) = the average value of student's contribution as perceived by the team members.
Team,Name,Email,CC,PC,Ratings Received
Team 2,student3 In Course With Sections,student3InCourseWithSections@gmail.tmt,100,N/A,N/A


Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
Team 2,student3 In Course With Sections,Sections,student3InCourseWithSections@gmail.tmt,Team 2,student3 In Course With Sections,Sections,student3InCourseWithSections@gmail.tmt,Equal share
Team 3,student4 In Course With Sections,Sections,student4InCourseWithSections@gmail.tmt,Team 3,student4 In Course With Sections,Sections,student4InCourseWithSections@gmail.tmt,No Response

"
`;

exports[`SessionResultCsvService should generate results for CONTRIB question 1`] = `
"Course,FSQTT.idOfTypicalCourse1
Session Name,CONTRIB Session


Question 1,\\"How much has each team member including yourself, contributed to the project?\\"

Summary Statistics
\\"In the points given below, an equal share is equal to 100 points. e.g. 80 means \\"\\"Equal share - 20%\\"\\" and 110 means \\"\\"Equal share + 10%\\"\\".\\"
Claimed Contribution (CC) = the contribution claimed by the student.
Perceived Contribution (PC) = the average value of student's contribution as perceived by the team members.
Team,Name,Email,CC,PC,Ratings Received
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,95,N/A,\\"N/A,N/A,N/A\\"
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,student2InCourse1@gmail.tmt,Not Submitted,75,\\"75,N/A,N/A\\"
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,student3InCourse1@gmail.tmt,Not Submitted,103,\\"103,N/A,N/A\\"
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,student4InCourse1@gmail.tmt,Not Submitted,122,\\"122,N/A,N/A\\"


Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,Equal share
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,Equal share - 20%
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,Equal share + 10%
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,Equal share + 30%
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,No Response
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,No Response

"
`;

exports[`SessionResultCsvService should generate results for MCQ question 1`] = `
"Course,FSQTT.idOfTypicalCourse1
Session Name,MCQ Session


Question 1,What do you like best about our product?

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,It's good
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,It's perfect
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,It's perfect
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,No Response
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,No Response


Question 2,What do you like best about the class' product?

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
Instructors,Instructor1 Course1,Course1,instructor1@course1.tmt,Instructors,Instructor1 Course1,Course1,instructor1@course1.tmt,It's good
Instructors,Instructor2 Course1,Course1,instructor2@course1.tmt,Instructors,Instructor2 Course1,Course1,instructor2@course1.tmt,It's perfect
Instructors,Instructor3 Course1,Course1,instructor3@course1.tmt,Instructors,Instructor3 Course1,Course1,instructor3@course1.tmt,No Response


Question 3,What can be improved for this class?

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,Lecture notes
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,No Response
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,No Response


Question 4,What do you like best about our product?

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,It's good
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,No Response
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,No Response

"
`;

exports[`SessionResultCsvService should generate results for MSQ question 1`] = `
"Course,FSQTT.idOfTypicalCourse1
Session Name,MSQ Session


Question 1,What do you like best about our product?

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback,It's good,It's perfect
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,,It's good,It's perfect
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,,It's good,
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,No Response
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,No Response


Question 2,What do you like best about the class' product?

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback,It's good,It's perfect
Instructors,Instructor1 Course1,Course1,instructor1@course1.tmt,Instructors,Instructor1 Course1,Course1,instructor1@course1.tmt,,It's good,It's perfect
Instructors,Instructor2 Course1,Course1,instructor2@course1.tmt,Instructors,Instructor2 Course1,Course1,instructor2@course1.tmt,,,It's perfect
Instructors,Instructor3 Course1,Course1,instructor3@course1.tmt,Instructors,Instructor3 Course1,Course1,instructor3@course1.tmt,


Question 3,Choose all the food you like

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback,Pizza,Pasta,Chicken rice
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,,Pizza,Pasta,Chicken rice
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,,,Pasta,
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,,,,
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,No Response
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,No Response

"
`;

exports[`SessionResultCsvService should generate results for NUMSCALE question 1`] = `
"Course,FSQTT.idOfTypicalCourse1
Session Name,NUMSCALE Session


Question 1,Rate our product.

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,3.5
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,2
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,No Response
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,No Response


Question 2,Rate our product.

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
Instructors,Instructor1 Course1,Course1,instructor1@course1.tmt,Instructors,Instructor1 Course1,Course1,instructor1@course1.tmt,4.5
Instructors,Instructor2 Course1,Course1,instructor2@course1.tmt,Instructors,Instructor2 Course1,Course1,instructor2@course1.tmt,1
Instructors,Instructor3 Course1,Course1,instructor3@course1.tmt,Instructors,Instructor3 Course1,Course1,instructor3@course1.tmt,No Response

"
`;

exports[`SessionResultCsvService should generate results for RANK question 1`] = `
"Course,FSQTT.idOfTypicalCourse1
Session Name,RANK Session


Question 1,Rank the other students.

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,4
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,3
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,2
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,1
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,2
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,3
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,4
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,3
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,No Response
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,No Response
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,No Response
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,No Response
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,No Response


Question 2,Rank the areas of improvement you think your team should make progress in.

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback,Rank 1,Rank 2,Rank 3,Rank 4,Rank 5
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"Team 1.1</td></div>'\\"\\"\\",\\"Team 1.1</td></div>'\\"\\"\\",,,Quality of work,Quality of progress reports,Time management,Teamwork and communication,
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"Team 1.1</td></div>'\\"\\"\\",\\"Team 1.1</td></div>'\\"\\"\\",,,Teamwork and communication,Time management,Quality of progress reports,Quality of work,
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"Team 1.1</td></div>'\\"\\"\\",\\"Team 1.1</td></div>'\\"\\"\\",,,\\"Time management, Teamwork and communication\\",Quality of work,,,
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"Team 1.1</td></div>'\\"\\"\\",\\"Team 1.1</td></div>'\\"\\"\\",,,Teamwork and communication,Time management,Quality of work,,
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,Team 1.2,Team 1.2,Team 1.2,,,Quality of work,,,,

"
`;

exports[`SessionResultCsvService should generate results for RUBRIC question 1`] = `
"Course,FSQTT.idOfTypicalCourse1
Session Name,RUBRIC Session


Question 1,Please choose the best choice for the following sub-questions.

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Sub Question,Choice Value,Choice Number
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,a,Yes,1
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,b,No,2
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,a,No,2
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,b,Yes,1
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,a,Yes,1
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,b,Yes,1
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,a,No Response,
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,b,Yes,1
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,All Sub-Questions,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,All Sub-Questions,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,All Sub-Questions,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,All Sub-Questions,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,All Sub-Questions,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,All Sub-Questions,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,All Sub-Questions,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,All Sub-Questions,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,All Sub-Questions,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,All Sub-Questions,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,All Sub-Questions,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,All Sub-Questions,No Response
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,All Sub-Questions,No Response


Question 2,Please choose the best choice for the following sub-questions. Only first subquestion has responses

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Sub Question,Choice Value,Choice Number
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,All Sub-Questions,No Response
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,a,Yes,1
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,b,No Response,
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,All Sub-Questions,No Response
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,All Sub-Questions,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,All Sub-Questions,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,All Sub-Questions,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,a,No,2
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,b,No Response,
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,All Sub-Questions,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,All Sub-Questions,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,All Sub-Questions,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,All Sub-Questions,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,a,Yes,1
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,b,No Response,
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,All Sub-Questions,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,All Sub-Questions,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,All Sub-Questions,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,All Sub-Questions,No Response
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,All Sub-Questions,No Response

"
`;

exports[`SessionResultCsvService should generate results for a specific question (question 1) 1`] = `
"Course,idOfTypicalCourse1
Session Name,First feedback session


Question 1,What is the best selling point of your product?

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,Student 1 self feedback.
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,I'm cool'

"
`;

exports[`SessionResultCsvService should generate results for a specific question (question 2) 1`] = `
"Course,idOfTypicalCourse1
Session Name,First feedback session


Question 2,Rate 1 other student's product

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,Response from student 2 to student 5.
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Response from student 3 \\"\\"to\\"\\" student 2. Multiline test.\\"
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,No Response
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,No Response
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,Response from student 5 to student 2.
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,No Response
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,No Response

"
`;

exports[`SessionResultCsvService should generate results for a specific question from/to section 1`] = `
"Course,idOfTypicalCourse1
Session Name,First feedback session
Section Name,Section 1
Section View Detail,Show response if either the giver or evaluee is in the selected section


Question 2,Rate 1 other student's product

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,Response from student 2 to student 5.
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Response from student 3 \\"\\"to\\"\\" student 2. Multiline test.\\"
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,Response from student 5 to student 2.

"
`;

exports[`SessionResultCsvService should generate results for a specific question with responses from and to section 1`] = `
"Course,idOfTypicalCourse1
Session Name,First feedback session
Section Name,Section 1
Section View Detail,Show response only if both are in the selected section


Question 2,Rate 1 other student's product

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Response from student 3 \\"\\"to\\"\\" student 2. Multiline test.\\"

"
`;

exports[`SessionResultCsvService should generate results for a specific question with responses from section 1`] = `
"Course,idOfTypicalCourse1
Session Name,First feedback session
Section Name,Section 1
Section View Detail,Show response if the giver is in the selected section


Question 2,Rate 1 other student's product

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,Response from student 2 to student 5.
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Response from student 3 \\"\\"to\\"\\" student 2. Multiline test.\\"

"
`;

exports[`SessionResultCsvService should generate results for a specific question with responses to section 1`] = `
"Course,idOfTypicalCourse1
Session Name,First feedback session
Section Name,Section 1
Section View Detail,Show response if the evaluee is in the selected section


Question 2,Rate 1 other student's product

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Response from student 3 \\"\\"to\\"\\" student 2. Multiline test.\\"
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,Response from student 5 to student 2.

"
`;

exports[`SessionResultCsvService should hide missing responses 1`] = `
"Course,idOfTypicalCourse1
Session Name,First feedback session


Question 1,What is the best selling point of your product?

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,Student 1 self feedback.
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,I'm cool'


Question 2,Rate 1 other student's product

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,Response from student 2 to student 5.
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Response from student 3 \\"\\"to\\"\\" student 2. Multiline test.\\"
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,Response from student 5 to student 2.


Question 3,My comments on the class

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
Instructors,Instructor1 Course1,Course1,instructor1@course1.tmt,-,-,,,\\"Good work, keep it up!\\"


Question 4,Instructor comments on the class

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback


Question 5,New format Text question

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback

"
`;

exports[`SessionResultCsvService should hide stats 1`] = `
"Course,idOfTypicalCourse1
Session Name,Session with MCQ


Question 1,What is the best selling point of your product?

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,Quality

"
`;

exports[`SessionResultCsvService should only show responses from and to section for feedbackSessionResultsC1S1S1 1`] = `
"Course,idOfTypicalCourse1
Session Name,First feedback session
Section Name,Section 1
Section View Detail,Show response only if both are in the selected section


Question 1,What is the best selling point of your product?

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,Student 1 self feedback.
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,I'm cool'


Question 2,Rate 1 other student's product

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Response from student 3 \\"\\"to\\"\\" student 2. Multiline test.\\"


Question 3,My comments on the class

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback


Question 4,Instructor comments on the class

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback


Question 5,New format Text question

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback

"
`;

exports[`SessionResultCsvService should only show responses from section for feedbackSessionResultsC1S1S1 1`] = `
"Course,idOfTypicalCourse1
Session Name,First feedback session
Section Name,Section 1
Section View Detail,Show response if the giver is in the selected section


Question 1,What is the best selling point of your product?

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,Student 1 self feedback.
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,I'm cool'


Question 2,Rate 1 other student's product

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,Response from student 2 to student 5.
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Response from student 3 \\"\\"to\\"\\" student 2. Multiline test.\\"


Question 3,My comments on the class

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback


Question 4,Instructor comments on the class

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback


Question 5,New format Text question

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback

"
`;

exports[`SessionResultCsvService should only show responses to section for feedbackSessionResultsC1S1S1 1`] = `
"Course,idOfTypicalCourse1
Session Name,First feedback session
Section Name,Section 1
Section View Detail,Show response if the evaluee is in the selected section


Question 1,What is the best selling point of your product?

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,Student 1 self feedback.
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,I'm cool'


Question 2,Rate 1 other student's product

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Response from student 3 \\"\\"to\\"\\" student 2. Multiline test.\\"
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,Response from student 5 to student 2.


Question 3,My comments on the class

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback


Question 4,Instructor comments on the class

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback


Question 5,New format Text question

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback

"
`;

exports[`SessionResultCsvService should show missing responses 1`] = `
"Course,idOfTypicalCourse1
Session Name,First feedback session


Question 1,What is the best selling point of your product?

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,Student 1 self feedback.
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,I'm cool'
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,No Response
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,No Response


Question 2,Rate 1 other student's product

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,Response from student 2 to student 5.
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Response from student 3 \\"\\"to\\"\\" student 2. Multiline test.\\"
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,No Response
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,No Response
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,Response from student 5 to student 2.
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,No Response
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,No Response


Question 3,My comments on the class

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
Instructors,Instructor1 Course1,Course1,instructor1@course1.tmt,-,-,,,\\"Good work, keep it up!\\"


Question 4,Instructor comments on the class

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
Instructors,Helper Course1,Course1,helper@course1.tmt,-,-,,,No Response
Instructors,Instructor Not Yet Joined Course 1,1,instructorNotYetJoinedCourse1@email.tmt,-,-,,,No Response
Instructors,Instructor1 Course1,Course1,instructor1@course1.tmt,-,-,,,No Response
Instructors,Instructor2 Course1,Course1,instructor2@course1.tmt,-,-,,,No Response
Instructors,Instructor3 Course1,Course1,instructor3@course1.tmt,-,-,,,No Response


Question 5,New format Text question

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
Instructors,Instructor1 Course1,Course1,instructor1@course1.tmt,-,-,,,No Response

"
`;

exports[`SessionResultCsvService should show missing responses for feedbackSessionResultsC1S1 1`] = `
"Course,idOfTypicalCourse1
Session Name,First feedback session


Question 1,What is the best selling point of your product?

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,Student 1 self feedback.
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,I'm cool'
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,No Response
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,No Response


Question 2,Rate 1 other student's product

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,Response from student 2 to student 5.
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Response from student 3 \\"\\"to\\"\\" student 2. Multiline test.\\"
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,No Response
\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,No Response
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,No Response
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,Response from student 5 to student 2.
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,No Response
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student4 In Course1,Course1,student4InCourse1@gmail.tmt,No Response


Question 3,My comments on the class

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
Instructors,Instructor1 Course1,Course1,instructor1@course1.tmt,-,-,,,\\"Good work, keep it up!\\"


Question 4,Instructor comments on the class

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
Instructors,Helper Course1,Course1,helper@course1.tmt,-,-,,,No Response
Instructors,Instructor Not Yet Joined Course 1,1,instructorNotYetJoinedCourse1@email.tmt,-,-,,,No Response
Instructors,Instructor1 Course1,Course1,instructor1@course1.tmt,-,-,,,No Response
Instructors,Instructor2 Course1,Course1,instructor2@course1.tmt,-,-,,,No Response
Instructors,Instructor3 Course1,Course1,instructor3@course1.tmt,-,-,,,No Response


Question 5,New format Text question

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
Instructors,Instructor1 Course1,Course1,instructor1@course1.tmt,-,-,,,No Response

"
`;

exports[`SessionResultCsvService should show responses along with stats for feedbackSessionResultsC1S1 1`] = `
"Course,idOfTypicalCourse1
Session Name,First feedback session


Question 1,What is the best selling point of your product?

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,Student 1 self feedback.
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,I'm cool'


Question 2,Rate 1 other student's product

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,Response from student 2 to student 5.
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Response from student 3 \\"\\"to\\"\\" student 2. Multiline test.\\"
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,Response from student 5 to student 2.


Question 3,My comments on the class

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
Instructors,Instructor1 Course1,Course1,instructor1@course1.tmt,-,-,,,\\"Good work, keep it up!\\"


Question 4,Instructor comments on the class

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback


Question 5,New format Text question

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback

"
`;

exports[`SessionResultCsvService should show responses for feedbackSessionResultsC1S1 1`] = `
"Course,idOfTypicalCourse1
Session Name,First feedback session


Question 1,What is the best selling point of your product?

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,Student 1 self feedback.
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,I'm cool'


Question 2,Rate 1 other student's product

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,Response from student 2 to student 5.
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Response from student 3 \\"\\"to\\"\\" student 2. Multiline test.\\"
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,Response from student 5 to student 2.


Question 3,My comments on the class

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
Instructors,Instructor1 Course1,Course1,instructor1@course1.tmt,-,-,,,\\"Good work, keep it up!\\"


Question 4,Instructor comments on the class

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback


Question 5,New format Text question

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback

"
`;

exports[`SessionResultCsvService should show responses from/to section for feedbackSessionResultsC1S1S1 1`] = `
"Course,idOfTypicalCourse1
Session Name,First feedback session
Section Name,Section 1
Section View Detail,Show response if either the giver or evaluee is in the selected section


Question 1,What is the best selling point of your product?

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,Student 1 self feedback.
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,I'm cool'


Question 2,Rate 1 other student's product

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,Response from student 2 to student 5.
\\"Team 1.1</td></div>'\\"\\"\\",student3 In Course1,Course1,student3InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,\\"Response from student 3 \\"\\"to\\"\\" student 2. Multiline test.\\"
Team 1.2,student5 In Course1,Course1,student5InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",student2 In Course1,Course1,student2InCourse1@gmail.tmt,Response from student 5 to student 2.


Question 3,My comments on the class

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback


Question 4,Instructor comments on the class

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback


Question 5,New format Text question

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback

"
`;

exports[`SessionResultCsvService should show stats 1`] = `
"Course,idOfTypicalCourse1
Session Name,Session with MCQ


Question 1,What is the best selling point of your product?

Team,Giver's Full Name,Giver's Last Name,Giver's Email,Recipient's Team,Recipient's Full Name,Recipient's Last Name,Recipient's Email,Feedback
\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,\\"Team 1.1</td></div>'\\"\\"\\",\\"student1 In Course1</td></div>'\\"\\"\\",\\"Course1</td></div>'\\"\\"\\",student1InCourse1@gmail.tmt,Quality

"
`;
